v16.2/designer/modules/GC.Spread.Sheets.Designer.md
# Namespace: Designer

[Spread](GC.Spread.md).[Sheets](GC.Spread.Sheets.md).Designer

## Table of contents

### Enumerations

- [FileType](../enums/GC.Spread.Sheets.Designer.FileType.md)
- [MessageBoxButtons](../enums/GC.Spread.Sheets.Designer.MessageBoxButtons.md)
- [MessageBoxIcon](../enums/GC.Spread.Sheets.Designer.MessageBoxIcon.md)
- [MessageBoxResult](../enums/GC.Spread.Sheets.Designer.MessageBoxResult.md)

### Classes

- [AtomicComponentBase](../classes/GC.Spread.Sheets.Designer.AtomicComponentBase.md)
- [CommandNames](../classes/GC.Spread.Sheets.Designer.CommandNames.md)
- [Designer](../classes/GC.Spread.Sheets.Designer.Designer.md)
- [Events](../classes/GC.Spread.Sheets.Designer.Events.md)
- [TemplateNames](../classes/GC.Spread.Sheets.Designer.TemplateNames.md)

### Interfaces

- [IBindingComponentBaseOption](../interfaces/GC.Spread.Sheets.Designer.IBindingComponentBaseOption.md)
- [IBoxSizePickerOption](../interfaces/GC.Spread.Sheets.Designer.IBoxSizePickerOption.md)
- [IButtonComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.IButtonComboEditorOption.md)
- [IButtonGroup](../interfaces/GC.Spread.Sheets.Designer.IButtonGroup.md)
- [IButtonOption](../interfaces/GC.Spread.Sheets.Designer.IButtonOption.md)
- [ICalcFieldDialogEditorOption](../interfaces/GC.Spread.Sheets.Designer.ICalcFieldDialogEditorOption.md)
- [ICalcItemDialogEditorOption](../interfaces/GC.Spread.Sheets.Designer.ICalcItemDialogEditorOption.md)
- [ICalcItemSolveOrderDialogEditorOption](../interfaces/GC.Spread.Sheets.Designer.ICalcItemSolveOrderDialogEditorOption.md)
- [ICheckBoxGroupItem](../interfaces/GC.Spread.Sheets.Designer.ICheckBoxGroupItem.md)
- [ICheckBoxGroupOption](../interfaces/GC.Spread.Sheets.Designer.ICheckBoxGroupOption.md)
- [ICheckBoxOption](../interfaces/GC.Spread.Sheets.Designer.ICheckBoxOption.md)
- [IChildrenItemBaseOption](../interfaces/GC.Spread.Sheets.Designer.IChildrenItemBaseOption.md)
- [ICollapsePanelItemOption](../interfaces/GC.Spread.Sheets.Designer.ICollapsePanelItemOption.md)
- [ICollapsePanelOption](../interfaces/GC.Spread.Sheets.Designer.ICollapsePanelOption.md)
- [IColorComboEditorItemsOption](../interfaces/GC.Spread.Sheets.Designer.IColorComboEditorItemsOption.md)
- [IColorComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.IColorComboEditorOption.md)
- [IColorGroup](../interfaces/GC.Spread.Sheets.Designer.IColorGroup.md)
- [IColorIconComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.IColorIconComboEditorOption.md)
- [IColorLineStyleComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.IColorLineStyleComboEditorOption.md)
- [IColorPickerOption](../interfaces/GC.Spread.Sheets.Designer.IColorPickerOption.md)
- [IColorPreviewOption](../interfaces/GC.Spread.Sheets.Designer.IColorPreviewOption.md)
- [IColumnOption](../interfaces/GC.Spread.Sheets.Designer.IColumnOption.md)
- [IColumnSetOption](../interfaces/GC.Spread.Sheets.Designer.IColumnSetOption.md)
- [ICommand](../interfaces/GC.Spread.Sheets.Designer.ICommand.md)
- [ICommandGroup](../interfaces/GC.Spread.Sheets.Designer.ICommandGroup.md)
- [IComponentBaseOption](../interfaces/GC.Spread.Sheets.Designer.IComponentBaseOption.md)
- [IComponentDialogButtonOption](../interfaces/GC.Spread.Sheets.Designer.IComponentDialogButtonOption.md)
- [IContainerBaseOption](../interfaces/GC.Spread.Sheets.Designer.IContainerBaseOption.md)
- [IContainerOption](../interfaces/GC.Spread.Sheets.Designer.IContainerOption.md)
- [IDataManagerColumnsList](../interfaces/GC.Spread.Sheets.Designer.IDataManagerColumnsList.md)
- [IDataManagerController](../interfaces/GC.Spread.Sheets.Designer.IDataManagerController.md)
- [IDataManagerTableColumnController](../interfaces/GC.Spread.Sheets.Designer.IDataManagerTableColumnController.md)
- [IDataManagerTableList](../interfaces/GC.Spread.Sheets.Designer.IDataManagerTableList.md)
- [IDataManagerTableListController](../interfaces/GC.Spread.Sheets.Designer.IDataManagerTableListController.md)
- [IDesignerConfig](../interfaces/GC.Spread.Sheets.Designer.IDesignerConfig.md)
- [IDialogTemplate](../interfaces/GC.Spread.Sheets.Designer.IDialogTemplate.md)
- [IEditableSelectOption](../interfaces/GC.Spread.Sheets.Designer.IEditableSelectOption.md)
- [IFieldListTreeOption](../interfaces/GC.Spread.Sheets.Designer.IFieldListTreeOption.md)
- [IFileSelectorOption](../interfaces/GC.Spread.Sheets.Designer.IFileSelectorOption.md)
- [IFillDialogOption](../interfaces/GC.Spread.Sheets.Designer.IFillDialogOption.md)
- [IFillEffectOption](../interfaces/GC.Spread.Sheets.Designer.IFillEffectOption.md)
- [IFlexContainerOption](../interfaces/GC.Spread.Sheets.Designer.IFlexContainerOption.md)
- [IFocusableComponentOption](../interfaces/GC.Spread.Sheets.Designer.IFocusableComponentOption.md)
- [IFontDialogEditorOption](../interfaces/GC.Spread.Sheets.Designer.IFontDialogEditorOption.md)
- [IFontEffectOption](../interfaces/GC.Spread.Sheets.Designer.IFontEffectOption.md)
- [IFontEffectsAndUnderlineOption](../interfaces/GC.Spread.Sheets.Designer.IFontEffectsAndUnderlineOption.md)
- [IFontPickerOption](../interfaces/GC.Spread.Sheets.Designer.IFontPickerOption.md)
- [IFontPreviewOption](../interfaces/GC.Spread.Sheets.Designer.IFontPreviewOption.md)
- [IFunctionLambdaEditorOption](../interfaces/GC.Spread.Sheets.Designer.IFunctionLambdaEditorOption.md)
- [IFunctionLetEditorOption](../interfaces/GC.Spread.Sheets.Designer.IFunctionLetEditorOption.md)
- [IGaugeColorComboEditorItemsOption](../interfaces/GC.Spread.Sheets.Designer.IGaugeColorComboEditorItemsOption.md)
- [IGradientColorStopsEditorOption](../interfaces/GC.Spread.Sheets.Designer.IGradientColorStopsEditorOption.md)
- [IHtmlTagAttribute](../interfaces/GC.Spread.Sheets.Designer.IHtmlTagAttribute.md)
- [IImageSparklineEditorOption](../interfaces/GC.Spread.Sheets.Designer.IImageSparklineEditorOption.md)
- [ILabelContainerOption](../interfaces/GC.Spread.Sheets.Designer.ILabelContainerOption.md)
- [ILabelLineOption](../interfaces/GC.Spread.Sheets.Designer.ILabelLineOption.md)
- [IListComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.IListComboEditorOption.md)
- [IListEditorOption](../interfaces/GC.Spread.Sheets.Designer.IListEditorOption.md)
- [IListGroupItemData](../interfaces/GC.Spread.Sheets.Designer.IListGroupItemData.md)
- [IListItemData](../interfaces/GC.Spread.Sheets.Designer.IListItemData.md)
- [IListOption](../interfaces/GC.Spread.Sheets.Designer.IListOption.md)
- [IListSubItemData](../interfaces/GC.Spread.Sheets.Designer.IListSubItemData.md)
- [IMarginEditorOption](../interfaces/GC.Spread.Sheets.Designer.IMarginEditorOption.md)
- [IMarkItem](../interfaces/GC.Spread.Sheets.Designer.IMarkItem.md)
- [IMultiColumnListOption](../interfaces/GC.Spread.Sheets.Designer.IMultiColumnListOption.md)
- [IMultiColumnPickerEditorOption](../interfaces/GC.Spread.Sheets.Designer.IMultiColumnPickerEditorOption.md)
- [IMultiListColumn](../interfaces/GC.Spread.Sheets.Designer.IMultiListColumn.md)
- [IMultiSelectListOption](../interfaces/GC.Spread.Sheets.Designer.IMultiSelectListOption.md)
- [INumberEditorOption](../interfaces/GC.Spread.Sheets.Designer.INumberEditorOption.md)
- [IPatternTypeComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.IPatternTypeComboEditorOption.md)
- [IPatternTypePickItemOption](../interfaces/GC.Spread.Sheets.Designer.IPatternTypePickItemOption.md)
- [IPatternTypePickerOption](../interfaces/GC.Spread.Sheets.Designer.IPatternTypePickerOption.md)
- [IPatternTypePreviewOption](../interfaces/GC.Spread.Sheets.Designer.IPatternTypePreviewOption.md)
- [IRadioItemData](../interfaces/GC.Spread.Sheets.Designer.IRadioItemData.md)
- [IRadioOption](../interfaces/GC.Spread.Sheets.Designer.IRadioOption.md)
- [IRangeSelectOption](../interfaces/GC.Spread.Sheets.Designer.IRangeSelectOption.md)
- [IRangeTemplateEditorOption](../interfaces/GC.Spread.Sheets.Designer.IRangeTemplateEditorOption.md)
- [IResetTextEditorOption](../interfaces/GC.Spread.Sheets.Designer.IResetTextEditorOption.md)
- [IRibbonPanel](../interfaces/GC.Spread.Sheets.Designer.IRibbonPanel.md)
- [IRibbonPanelConfig](../interfaces/GC.Spread.Sheets.Designer.IRibbonPanelConfig.md)
- [ISheetListComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.ISheetListComboEditorOption.md)
- [ISidePanel](../interfaces/GC.Spread.Sheets.Designer.ISidePanel.md)
- [ISize](../interfaces/GC.Spread.Sheets.Designer.ISize.md)
- [ISliderOption](../interfaces/GC.Spread.Sheets.Designer.ISliderOption.md)
- [ISortColorComboEditorOption](../interfaces/GC.Spread.Sheets.Designer.ISortColorComboEditorOption.md)
- [ISortColorEditorOption](../interfaces/GC.Spread.Sheets.Designer.ISortColorEditorOption.md)
- [ISpreadContainerOption](../interfaces/GC.Spread.Sheets.Designer.ISpreadContainerOption.md)
- [ISpreadTemplateOption](../interfaces/GC.Spread.Sheets.Designer.ISpreadTemplateOption.md)
- [ITabControlItemOption](../interfaces/GC.Spread.Sheets.Designer.ITabControlItemOption.md)
- [ITabControlOption](../interfaces/GC.Spread.Sheets.Designer.ITabControlOption.md)
- [ITabSelectorOption](../interfaces/GC.Spread.Sheets.Designer.ITabSelectorOption.md)
- [ITableOption](../interfaces/GC.Spread.Sheets.Designer.ITableOption.md)
- [ITableSheetPanelEditor](../interfaces/GC.Spread.Sheets.Designer.ITableSheetPanelEditor.md)
- [ITableSheetPanelTitle](../interfaces/GC.Spread.Sheets.Designer.ITableSheetPanelTitle.md)
- [ITextBlockOption](../interfaces/GC.Spread.Sheets.Designer.ITextBlockOption.md)
- [ITextEditorOption](../interfaces/GC.Spread.Sheets.Designer.ITextEditorOption.md)

### Type aliases

- [CommandMap](GC.Spread.Sheets.Designer.md#commandmap)
- [CommandType](GC.Spread.Sheets.Designer.md#commandtype)
- [IComponentRenderType](GC.Spread.Sheets.Designer.md#icomponentrendertype)
- [IconType](GC.Spread.Sheets.Designer.md#icontype)
- [RuleType](GC.Spread.Sheets.Designer.md#ruletype)
- [TemplateMap](GC.Spread.Sheets.Designer.md#templatemap)

### Variables

- [DefaultConfig](GC.Spread.Sheets.Designer.md#defaultconfig)
- [LicenseKey](GC.Spread.Sheets.Designer.md#licensekey)
- [ToolBarModeConfig](GC.Spread.Sheets.Designer.md#toolbarmodeconfig)

### Functions

- [closeDialog](GC.Spread.Sheets.Designer.md#closedialog)
- [findControl](GC.Spread.Sheets.Designer.md#findcontrol)
- [getCommand](GC.Spread.Sheets.Designer.md#getcommand)
- [getResources](GC.Spread.Sheets.Designer.md#getresources)
- [getTemplate](GC.Spread.Sheets.Designer.md#gettemplate)
- [registerTemplate](GC.Spread.Sheets.Designer.md#registertemplate)
- [setResources](GC.Spread.Sheets.Designer.md#setresources)
- [showDialog](GC.Spread.Sheets.Designer.md#showdialog)
- [showMessageBox](GC.Spread.Sheets.Designer.md#showmessagebox)

## Type aliases

### <a id="commandmap" name="commandmap"></a> CommandMap

Ƭ **CommandMap**: { [key in string]: ICommand }

___

### <a id="commandtype" name="commandtype"></a> CommandType

Ƭ **CommandType**: ``"button"`` \| ``"dropdown"`` \| ``"separator"`` \| ``"checkbox"`` \| ``"comboBox"`` \| ``"text"`` \| ``"spinner"`` \| ``"list-preview"`` \| ``"colorPicker"`` \| ``"groupHeader"`` \| ``"chartFormat"`` \| ``"tableFooter"`` \| ``"SparklineColorPicker"`` \| ``"textBox"`` \| ``"listContent"`` \| `string`

___

### <a id="icomponentrendertype" name="icomponentrendertype"></a> IComponentRenderType


Ƭ **IComponentRenderType**: [`INumberEditorOption`](../interfaces/GC.Spread.Sheets.Designer.INumberEditorOption.md) \| [`IRadioOption`](../interfaces/GC.Spread.Sheets.Designer.IRadioOption.md) \| [`IFileSelectorOption`](../interfaces/GC.Spread.Sheets.Designer.IFileSelectorOption.md) \| [`IResetTextEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IResetTextEditorOption.md) \| [`ISliderOption`](../interfaces/GC.Spread.Sheets.Designer.ISliderOption.md) \| [`ITextBlockOption`](../interfaces/GC.Spread.Sheets.Designer.ITextBlockOption.md) \| [`ITextEditorOption`](../interfaces/GC.Spread.Sheets.Designer.ITextEditorOption.md) \| [`IColumnOption`](../interfaces/GC.Spread.Sheets.Designer.IColumnOption.md) \| [`IColumnSetOption`](../interfaces/GC.Spread.Sheets.Designer.IColumnSetOption.md) \| [`IFlexContainerOption`](../interfaces/GC.Spread.Sheets.Designer.IFlexContainerOption.md) \| [`ILabelLineOption`](../interfaces/GC.Spread.Sheets.Designer.ILabelLineOption.md) \| [`IButtonOption`](../interfaces/GC.Spread.Sheets.Designer.IButtonOption.md) \| [`ILabelContainerOption`](../interfaces/GC.Spread.Sheets.Designer.ILabelContainerOption.md) \| [`ICheckBoxOption`](../interfaces/GC.Spread.Sheets.Designer.ICheckBoxOption.md) \| [`IContainerOption`](../interfaces/GC.Spread.Sheets.Designer.IContainerOption.md) \| [`IListOption`](../interfaces/GC.Spread.Sheets.Designer.IListOption.md) \| [`IMultiSelectListOption`](../interfaces/GC.Spread.Sheets.Designer.IMultiSelectListOption.md) \| [`ITabControlOption`](../interfaces/GC.Spread.Sheets.Designer.ITabControlOption.md) \| [`IRangeSelectOption`](../interfaces/GC.Spread.Sheets.Designer.IRangeSelectOption.md) \| [`IColorPickerOption`](../interfaces/GC.Spread.Sheets.Designer.IColorPickerOption.md) \| [`IListComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IListComboEditorOption.md) \| [`IListEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IListEditorOption.md) \| [`IFontPickerOption`](../interfaces/GC.Spread.Sheets.Designer.IFontPickerOption.md) \| [`IFontDialogEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IFontDialogEditorOption.md) \| [`IColorLineStyleComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IColorLineStyleComboEditorOption.md) \| [`IColorIconComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IColorIconComboEditorOption.md) \| [`IColorComboEditorItemsOption`](../interfaces/GC.Spread.Sheets.Designer.IColorComboEditorItemsOption.md) \| [`IColorPreviewOption`](../interfaces/GC.Spread.Sheets.Designer.IColorPreviewOption.md) \| [`ICollapsePanelOption`](../interfaces/GC.Spread.Sheets.Designer.ICollapsePanelOption.md) \| [`ICheckBoxGroupOption`](../interfaces/GC.Spread.Sheets.Designer.ICheckBoxGroupOption.md) \| [`IColorComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IColorComboEditorOption.md) \| [`IFillDialogOption`](../interfaces/GC.Spread.Sheets.Designer.IFillDialogOption.md) \| [`IFillEffectOption`](../interfaces/GC.Spread.Sheets.Designer.IFillEffectOption.md) \| [`IPatternTypeComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IPatternTypeComboEditorOption.md) \| [`IPatternTypePickerOption`](../interfaces/GC.Spread.Sheets.Designer.IPatternTypePickerOption.md) \| [`IPatternTypePreviewOption`](../interfaces/GC.Spread.Sheets.Designer.IPatternTypePreviewOption.md) \| [`ISheetListComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.ISheetListComboEditorOption.md) \| [`IMultiColumnPickerEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IMultiColumnPickerEditorOption.md) \| [`IFunctionLetEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IFunctionLetEditorOption.md) \| [`IFunctionLambdaEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IFunctionLambdaEditorOption.md) \| [`IFontEffectsAndUnderlineOption`](../interfaces/GC.Spread.Sheets.Designer.IFontEffectsAndUnderlineOption.md) \| [`IFontEffectOption`](../interfaces/GC.Spread.Sheets.Designer.IFontEffectOption.md) \| [`IFontPreviewOption`](../interfaces/GC.Spread.Sheets.Designer.IFontPreviewOption.md) \| [`IGaugeColorComboEditorItemsOption`](../interfaces/GC.Spread.Sheets.Designer.IGaugeColorComboEditorItemsOption.md) \| [`IBoxSizePickerOption`](../interfaces/GC.Spread.Sheets.Designer.IBoxSizePickerOption.md) \| [`ITabSelectorOption`](../interfaces/GC.Spread.Sheets.Designer.ITabSelectorOption.md) \| [`IGradientColorStopsEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IGradientColorStopsEditorOption.md) \| [`IButtonComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IButtonComboEditorOption.md) \| [`IImageSparklineEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IImageSparklineEditorOption.md) \| [`ICalcFieldDialogEditorOption`](../interfaces/GC.Spread.Sheets.Designer.ICalcFieldDialogEditorOption.md) \| [`IFieldListTreeOption`](../interfaces/GC.Spread.Sheets.Designer.IFieldListTreeOption.md) \| [`ISpreadContainerOption`](../interfaces/GC.Spread.Sheets.Designer.ISpreadContainerOption.md) \| [`ISortColorComboEditorOption`](../interfaces/GC.Spread.Sheets.Designer.ISortColorComboEditorOption.md) \| [`ISortColorEditorOption`](../interfaces/GC.Spread.Sheets.Designer.ISortColorEditorOption.md) \| [`IMultiColumnListOption`](../interfaces/GC.Spread.Sheets.Designer.IMultiColumnListOption.md) \| [`IMarginEditorOption`](../interfaces/GC.Spread.Sheets.Designer.IMarginEditorOption.md) \| [`ISpreadTemplateOption`](../interfaces/GC.Spread.Sheets.Designer.ISpreadTemplateOption.md) \| [`IDataManagerController`](../interfaces/GC.Spread.Sheets.Designer.IDataManagerController.md) \| [`IDataManagerTableListController`](../interfaces/GC.Spread.Sheets.Designer.IDataManagerTableListController.md) \| [`IDataManagerTableColumnController`](../interfaces/GC.Spread.Sheets.Designer.IDataManagerTableColumnController.md) \| [`IDataManagerTableList`](../interfaces/GC.Spread.Sheets.Designer.IDataManagerTableList.md) \| [`IDataManagerColumnsList`](../interfaces/GC.Spread.Sheets.Designer.IDataManagerColumnsList.md) \| [`ITableSheetPanelEditor`](../interfaces/GC.Spread.Sheets.Designer.ITableSheetPanelEditor.md) \| [`IEditableSelectOption`](../interfaces/GC.Spread.Sheets.Designer.IEditableSelectOption.md) \| [`ITableOption`](../interfaces/GC.Spread.Sheets.Designer.ITableOption.md) \| [`ITableSheetPanelTitle`](../interfaces/GC.Spread.Sheets.Designer.ITableSheetPanelTitle.md)

___

### <a id="icontype" name="icontype"></a> IconType

Ƭ **IconType**: ``"foreColor"`` \| ``"backColor"`` \| ``"sparklineColor"``

___

### <a id="ruletype" name="ruletype"></a> RuleType

Ƭ **RuleType**: ``"Defaults"`` \| ``"Float"`` \| ``"Currency"`` \| ``"Percent"``

___

### <a id="templatemap" name="templatemap"></a> TemplateMap

Ƭ **TemplateMap**: { [key in string]: IDialogTemplate }

## Variables

### <a id="defaultconfig" name="defaultconfig"></a> DefaultConfig

• **DefaultConfig**: [`IDesignerConfig`](../interfaces/GC.Spread.Sheets.Designer.IDesignerConfig.md)

设计器的默认配置

___

### <a id="licensekey" name="licensekey"></a> LicenseKey

• **LicenseKey**: `string`

设计器授权

___

### <a id="toolbarmodeconfig" name="toolbarmodeconfig"></a> ToolBarModeConfig

• **ToolBarModeConfig**: [`IDesignerConfig`](../interfaces/GC.Spread.Sheets.Designer.IDesignerConfig.md)

设计器toolbar模式的配置

## Functions

### <a id="closedialog" name="closedialog"></a> closeDialog

▸ **closeDialog**(`templateName`, `submitValue`): `void`

关闭打开的对话框

**`代码示例`**
```
// 有时用户希望在没有UI的情况下直接关闭对话框，他们可以使用closeDialog并在关闭对话框后决定是否提交值
  var inputCommand = {
      title: "Input",
      text: "Input",
      iconClass: "ribbon-button-input-text",
      bigButton: true,
      commandName: "inputText",
      execute: (context, propertyName) => {
          var dialogOption = {
              text: "",
          };
          GC.Spread.Sheets.Designer.showDialog("setText", dialogOption, (result) => {
              if (!result) {
                  return;
              }
              var text = result.text;
              var spread = context.getWorkbook();
              var sheet = spread.getActiveSheet();
              var column = sheet.getActiveColumnIndex();
              var row = sheet.getActiveRowIndex();
              sheet.setValue(row, column, text);
              clearInterval(showTipsInterval);
          }, (error) => {
              console.error(error);
          }, checkResult);
          var showTips = document.querySelector(".show-tips");
          var i = 4;
          var showTipsInterval = setInterval(() => {
              showTips.innerText = "You must input valid value within " + i + " seconds!";
              i--;
              if (i === -1) {
                  clearInterval(showTipsInterval);
                  GC.Spread.Sheets.Designer.closeDialog("setText", false);
              }
          }, 1000);
      }
  };
  var config = GC.Spread.Sheets.Designer.DefaultConfig;
  config.commandMap = {
      input: inputCommand,
  };
  var inputCommandGroup = {
      label: "input",
      thumbnailClass: "input",
      commandGroup: {
          children: [
              {
                  direction: "vertical",
                  commands: [
                      "input"
                  ]
              }
          ]
      }
  };
  if (config && config.ribbon) {
  config.ribbon[0].buttonGroups.push(inputCommandGroup);
  }
  var setTextTemplate = {
      title: "demo",
      content: [
          {
              type: "ColumnSet",
              children: [
                  {
                      type: "Column",
                      children: [
                          {
                              type: "TextBlock",
                              text: "Text:",
                          }
                      ]
                  },
                  {
                      type: "Column",
                      children: [
                          {
                              type: "TextEditor",
                              margin: "0 0 0 10px",
                              bindingPath: "text"
                          }
                      ]
                  }
              ]
          },
          {
              type: "TextBlock",
              text: "You must input valid value within 5 seconds!",
              className: "show-tips"
          },
      ]
  };
  GC.Spread.Sheets.Designer.registerTemplate("setText", setTextTemplate);
  function checkResult(value) {
      if (value.text === "") {
          GC.Spread.Sheets.Designer.showMessageBox("Please do not input a null value.", "Warning", GC.Spread.Sheets.Designer.MessageBoxIcon.warning);
          return false;
      } else {
          返回true
      }
  }
  var designer = new GC.Spread.Sheets.Designer.Designer(document.getElementById("gc-designer-container"), config);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `templateName` | `string` | 打开模板名称，模板必须在设计器中注册 |
| `submitValue` | `boolean` | 是否在关闭对话框后提交打开模板时的值 |

#### Returns

`void`

___

### <a id="findcontrol" name="findcontrol"></a> findControl

▸ **findControl**(`host`): [`Designer`](../classes/GC.Spread.Sheets.Designer.Designer.md) \| `undefined`

获取现有HTMLElement的设计器实例

**`代码示例`**
```
// 本示例将获得现有HTMLElement的设计器实例
var designer = new GC.Spread.Sheets.Designer.Designer(document.getElementById("hostDiv"));
var designer = GC.Spread.Sheets.Designer.findControl(document.getElementById("hostDiv"));
var designer = GC.Spread.Sheets.Designer.findControl("hostDiv");
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `host` | `string` \| `HTMLElement` | 目标HTMLElement |

#### Returns

[`Designer`](../classes/GC.Spread.Sheets.Designer.Designer.md) \| `undefined`

现有HTMLElement的设计器实例

___

### <a id="getcommand" name="getcommand"></a> getCommand

▸ **getCommand**(`commandName?`): [`ICommand`](../interfaces/GC.Spread.Sheets.Designer.ICommand.md) \| `undefined`

此方法将仅使用命令名获取commandMap中的命令，或获取commandMap中注册的所有命令

**`代码示例`**
```
// 用户想自定义字体
var config = GC.Spread.Sheets.Designer.DefaultConfig;
var customCommand = GC.Spread.Sheets.Designer.getCommand("fontFamily");
customCommand.dropdownList.push({
    text: "customFont",
    value: "customFont"
});
if (config && config.ribbon) {
config.ribbon[0].buttonGroups[2].commandGroup.children[0].commands[0] = 'customFont';
}
config.commandMap = {
     customFont: customCommand
}
designer.setConfig(config);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `commandName?` | `string` | 命令名，唯一标识一个命令，如果commandName为空，将返回所有已注册的命令 |

#### Returns

[`ICommand`](../interfaces/GC.Spread.Sheets.Designer.ICommand.md) \| `undefined`

- 按命令名找到的命令

___

### <a id="getresources" name="getresources"></a> getResources

▸ **getResources**(): `Object`

获取设计器全局资源对象

**`代码示例`**
```
// 用户想要更改功能区或模板中的某些资源，他们需要获取原始设计器资源并对其进行修改，然后在初始化设计器之前将其设置回原位
var resources = GC.Spread.Sheets.Designer.getResources();
resources.ok = "OK!";
resources.formatDialog.title = "Format Dialog!"
resources.ribbon.home.home = "HOME!";
resources.ribbon.home.paste = "Paste!";
GC.Spread.Sheets.Designer.setResources(resources);
var designer = new GC.Spread.Sheets.Designer.Designer(document.getElementById("hostDiv"));
```

#### Returns

`Object`

- 设计器资源

___

### <a id="gettemplate" name="gettemplate"></a> getTemplate

▸ **getTemplate**(`templateName`): [`IDialogTemplate`](../interfaces/GC.Spread.Sheets.Designer.IDialogTemplate.md) \| ``null``

可以通过模板名称找到已注册模板的副本模板应该注册到templateMap

**`代码示例`**
```
// 用户想要在设计器中将"插入格式化单元格"对话框的标题更改为"自定义"
var designer = new GC.Spread.Sheets.Designer.Designer(document.getElementById("hostDiv"));
var formatCellsTemplate = GC.Spread.Sheets.Designer.getTemplate("formatDialogTemplate").
formatCellsTemplate.title = "Custom";
//相同的模板名称会冲掉原来的模板
GC.Spread.Sheets.Designer.registerTemplate("formatDialogTemplate", formatCellsTemplate);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `templateName` | `string` | 模板应该注册到templateMap可以通过模板名称找到已注册模板的副本 |

#### Returns

[`IDialogTemplate`](../interfaces/GC.Spread.Sheets.Designer.IDialogTemplate.md) \| ``null``

- 根据模板名称找到模板

___

### <a id="registertemplate" name="registertemplate"></a> registerTemplate

▸ **registerTemplate**(`templateName`, `template`): `void`

向templateMap注册一个模板，这样设计器就可以找到该模板

**`代码示例`**
```
//例如，下面的代码将打开templateExample，该选项将在模板中使用，单击ok后，将设置文本和设置水平对齐
var inputCommand = {
    title: "Input",
    text: "Input",
    iconClass: "ribbon-button-input-text",
    bigButton: true,
    commandName: "inputText",
    execute: (context, propertyName) => {
        var dialogOption = {
            text: "",
            isCenter: false,
        };
        GC.Spread.Sheets.Designer.showDialog("setText", dialogOption, (result) => {
            if (!result) {
                 return;
             }
            var text = result.text;
            var isCenter = result.isCenter;
            var spread = context.getWorkbook();
            var sheet = spread.getActiveSheet();
            var column = sheet.getActiveColumnIndex();
            var row = sheet.getActiveRowIndex();
            sheet.setValue(row, column, text);
            if (isCenter) {
                var style = new GC.Spread.Sheets.Style();
                style.hAlign = GC.Spread.Sheets.HorizontalAlign.center;
                sheet.setStyle(row, column, style);
            }
        }, (error) => {
            console.error(error);
        }, checkResult);
    }
};
var config = GC.Spread.Sheets.Designer.DefaultConfig;
config.commandMap = {
    input: inputCommand,
};
var inputCommandGroup = {
    label: "input",
    thumbnailClass: "input",
    commandGroup: {
        children: [
            {
                direction: "vertical",
                commands: [
                    "input"
                ]
            }
        ]
    }
};
if (config && config.ribbon) {
config.ribbon[0].buttonGroups.push(inputCommandGroup);
}
var setTextTemplate = {
    title: "demo",
    content: [
        {
            type: "ColumnSet",
            children: [
                {
                    type: "Column",
                    children: [
                        {
                            type: "TextBlock",
                            text: "Text:",
                        }
                    ]
                },
                {
                    type: "Column",
                    children: [
                        {
                            type: "TextEditor",
                            margin: "0 0 0 10px",
                            bindingPath: "text"
                        }
                     ]
                }
            ]
        },
        {
            type: "CheckBox",
            bindingPath: "isCenter",
            text: "Center",
         },
    ]
};
GC.Spread.Sheets.Designer.registerTemplate("setText", setTextTemplate);
function checkResult(value) {
    if (value.text === "") {
        GC.Spread.Sheets.Designer.showMessageBox("Please do not input a null value.", "Warning", GC.Spread.Sheets.Designer.MessageBoxIcon.warning);
        return false;
    } else {
        返回true
    }
}
var designer = new GC.Spread.Sheets.Designer.Designer(document.getElementById("gc-designer-container"), config);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `templateName` | `string` | 模板名称，唯一标识一个模板 |
| `template` | [`IDialogTemplate`](../interfaces/GC.Spread.Sheets.Designer.IDialogTemplate.md) | 模板实例 |

#### Returns

`void`

___

### <a id="setresources" name="setresources"></a> setResources

▸ **setResources**(`resources`): `void`

设置设计器全局资源对象

**`代码示例`**
```
// 用户想要更改功能区或模板中的某些资源，他们需要获取原始设计器资源并对其进行修改，然后在初始化设计器之前将其设置回原位
var resources = GC.Spread.Sheets.Designer.getResources();
resources.ok = "OK!";
resources.formatDialog.title = "Format Dialog!"
resources.ribbon.home.home = "HOME!";
resources.ribbon.home.paste = "Paste!";
GC.Spread.Sheets.Designer.setResources(resources);
var designer = new GC.Spread.Sheets.Designer.Designer(document.getElementById("hostDiv"));
```

#### Parameters

| Name | Type |
| :------ | :------ |
| `resources` | `Object` |

#### Returns

`void`

___

### <a id="showdialog" name="showdialog"></a> showDialog

▸ **showDialog**(`templateName`, `bindingData`, `successCallback`, `errCallback?`, `validCallback?`, `popupElement?`): `void`

此函数将显示一个带有选项的对话框，该选项将用于根据模板名称获得的对话框模板中

**`代码示例`**
```
//例如，下面的代码将打开templateExample，该选项将在模板中使用，单击ok后，将设置文本和设置水平对齐
var inputCommand = {
    title: "Input",
    text: "Input",
    iconClass: "ribbon-button-input-text",
    bigButton: true,
    commandName: "inputText",
    execute: (context, propertyName) => {
        var dialogOption = {
            text: "",
            isCenter: false,
        };
        GC.Spread.Sheets.Designer.showDialog("setText", dialogOption, (result) => {
            if (!result) {
                 return;
             }
            var text = result.text;
            var isCenter = result.isCenter;
            var spread = context.getWorkbook();
            var sheet = spread.getActiveSheet();
            var column = sheet.getActiveColumnIndex();
            var row = sheet.getActiveRowIndex();
            sheet.setValue(row, column, text);
            if (isCenter) {
                var style = new GC.Spread.Sheets.Style();
                style.hAlign = GC.Spread.Sheets.HorizontalAlign.center;
                sheet.setStyle(row, column, style);
            }
        }, (error) => {
            console.error(error);
        }, checkResult);
    }
};
var config = GC.Spread.Sheets.Designer.DefaultConfig;
config.commandMap = {
    input: inputCommand,
};
var inputCommandGroup = {
    label: "input",
    thumbnailClass: "input",
    commandGroup: {
        children: [
            {
                direction: "vertical",
                commands: [
                    "input"
                ]
            }
        ]
    }
};
if (config && config.ribbon) {
config.ribbon[0].buttonGroups.push(inputCommandGroup);
}
var setTextTemplate = {
    title: "demo",
    content: [
        {
            type: "ColumnSet",
            children: [
                {
                    type: "Column",
                    children: [
                        {
                            type: "TextBlock",
                            text: "Text:",
                        }
                    ]
                },
                {
                    type: "Column",
                    children: [
                        {
                            type: "TextEditor",
                            margin: "0 0 0 10px",
                            bindingPath: "text"
                        }
                     ]
                }
            ]
        },
        {
            type: "CheckBox",
            bindingPath: "isCenter",
            text: "Center",
         },
    ]
};
GC.Spread.Sheets.Designer.registerTemplate("setText", setTextTemplate);
function checkResult(value) {
    if (value.text === "") {
        GC.Spread.Sheets.Designer.showMessageBox("Please do not input a null value.", "Warning", GC.Spread.Sheets.Designer.MessageBoxIcon.warning);
        return false;
    } else {
        返回true
    }
}
var designer = new GC.Spread.Sheets.Designer.Designer(document.getElementById("gc-designer-container"), config);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `templateName` | `string` | 模板的名称 |
| `bindingData` | `Object` | 对话框bindingData |
| `successCallback` | `Function` | 对话框关闭后的回调如果选择OK按钮，则返回对话框数据，如果选择cancel或'X'，则返回null |
| `errCallback?` | `Function` | 对话框在发生异常的回调 |
| `validCallback?` | `Function` | 对话框回调函数，将在单击确定并关闭对话框后但在返回结果之前更改结果或执行某些操作，然后返回操作结果 |
| `popupElement?` | `HTMLElement` | 模板所依赖的对话框目标HTMLElement |

#### Returns

`void`

___

### <a id="showmessagebox" name="showmessagebox"></a> showMessageBox

▸ **showMessageBox**(`text`, `title`, `icon`, `successCallback?`, `errCallback?`, `buttons?`): `void`

这个函数将显示一个带有输入选项的消息框

**`代码示例`**
```
//For example, the following code will show a messageBox with title "this is title", text "this is error text" and icon yellow triangle exclamation mark.
var showCommand = {
    title: "show",
    text: "show",
    iconClass: "ribbon-button-show",
    bigButton: true,
    commandName: "show",
    execute: (context, propertyName) => {
        GC.Spread.Sheets.Designer.showMessageBox("this is title", "this is error text", GC.Spread.Sheets.Designer.MessageBoxIcon.warning);  // 显示消息框
    }
};
var config = GC.Spread.Sheets.Designer.DefaultConfig;
config.commandMap = {
    showMessage: showCommand
};
var showCommandGroup = {
    label: "Show",
    thumbnailClass: "Show",
    commandGroup: {
        children: [
            {
                direction: "vertical",
                commands: [
                    "showMessage"
                ]
            }
        ]
    }
};
if (config && config.ribbon) {
config.ribbon[0].buttonGroups.push(showCommandGroup);
}
var d = new GC.Spread.Sheets.Designer.Designer(document.getElementById("gc-designer-container"), config);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `text` | `string` | 消息框的错误文本 |
| `title` | `string` | 消息框的标题 |
| `icon` | [`MessageBoxIcon`](../enums/GC.Spread.Sheets.Designer.MessageBoxIcon.md) | 消息框的图标 |
| `successCallback?` | `Function` | After dialog is closed, this method executes. The parameter "data" indicates which button is clicked, its type is GC.Spread.Sheets.Designer.MessageBoxResult, 1 is "ok", 2 is "yes", 3 is "no" and 4 is "cancel". |
| `errCallback?` | `Function` | 对话框在发生异常的回调 |
| `buttons?` | [`MessageBoxButtons`](../enums/GC.Spread.Sheets.Designer.MessageBoxButtons.md) | 消息框的按钮 |

#### Returns

`void`
